--- a/src/main/resources/mails/templates/billing-closure-receipt.html
+++ b/src/main/resources/mails/templates/billing-closure-receipt.html
@@ -117,7 +117,7 @@
     </table>
     <p style="margin-top: 10px;">&#160;</p>
     <table
-        style="border : solid; border-color: rgb(0,83,159);width: 680px;margin-top: 20px;border-collapse: collapse;break-inside: avoid;">
+        style="border : solid; border-color: rgb(0,83,159);width: 680px;margin-top: 20px;border-collapse: collapse;break-inside: avoid; transform: translateY(2px);">
         <tr>
             <td class="td-date "></td>
             <td style="text-align: right;padding-right: 10px;border-right: solid; border-color: rgb(0,83,159);">
