--- a/src/main/resources/mails/templates/quotation-page.html
+++ b/src/main/resources/mails/templates/quotation-page.html
@@ -218,6 +218,32 @@
     </table>
     <table style="width:690px">
         <tr>
+            <td style="font-size: 20px;text-align: center;font-weight: bolder;">Liste des pièces jointes à fournir</td>
+        </tr>
+    </table>
+    <p>Pour la réalisation de ce devis, la liste des pièces jointes suivantes est usuellement nécessaire :</p>
+    <ul>
+        <th:block th:if="${assos!=null}" th:each="asso : ${assos}">
+            <th:block th:if="${asso.services!=null}" th:each="service : ${asso.services}">
+                <li><span th:text="${service.serviceType.label}"></span> : </li>
+                <ul>
+                    <li th:if="${service.assoServiceDocuments!=null} and ${assoServiceDocument.isMandatory}"
+                        th:each="assoServiceDocument : ${service.assoServiceDocuments}">
+                        <span th:text="${assoServiceDocument.typeDocument.label}"></span>
+                    </li>
+                </ul>
+            </th:block>
+        </th:block>
+    </ul>
+    <div class="page-break"></div>
+    <table>
+        <tr>
+            <td><img width="690px" th:src="@{classpath:/images/invoice-page1-header.png}" src="picture.png" />
+            </td>
+        </tr>
+    </table>
+    <table style="width:690px">
+        <tr>
             <td style="font-size: 20px;text-align: center;font-weight: bolder;">CONDITIONS GENERALES DE VENTE</td>
         </tr>
     </table>
@@ -392,7 +418,6 @@
             </td>
         </tr>
     </table>
-    </div>
 </body>
 
 </html>
