--- a/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
@@ -53,6 +53,7 @@
    height: 500,
    menubar: false,
    entity_encoding : 'raw',
+   browser_spellcheck: true,
    plugins: [
      'table'
    ],
