--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -156,11 +156,12 @@
                 <div *ngIf="!editMode">
                   <span [innerHTML]="announcement.noticeHeader | trustHtml" class="announce-container"></span>
                 </div>
-                <editor apiKey="7hx3s724hmzwlzwrnwpyss45j2tp31yjutysm78id6s2gtgh" *ngIf="editMode"
+                <editor apiKey="8ejtvpvdytkf17catd32ulsbawbrf0ky7xdnb9935it046jq" *ngIf="editMode"
                   formControlName="noticeHeader" [disabled]="!editMode" [(ngModel)]="announcement.noticeHeader" [init]="{
                     height: 500,
                     menubar: true,
                     entity_encoding : 'raw',
+                    browser_spellcheck: true,
                     language: 'fr_FR',
                     plugins: [
                       'table','fullscreen', 'lists', 'advlist'
@@ -178,12 +179,13 @@
                 <div *ngIf="!editMode">
                   <span [innerHTML]="announcement.notice | trustHtml" class="announce-container"></span>
                 </div>
-                <editor apiKey="7hx3s724hmzwlzwrnwpyss45j2tp31yjutysm78id6s2gtgh" *ngIf="editMode"
+                <editor apiKey="8ejtvpvdytkf17catd32ulsbawbrf0ky7xdnb9935it046jq" *ngIf="editMode"
                   formControlName="notice" [disabled]="!editMode" [(ngModel)]="announcement.notice" [init]="{
      height: 500,
      menubar: true,
      entity_encoding : 'raw',
      language: 'fr_FR',
+     browser_spellcheck: true,
      plugins: [
        'table','fullscreen', 'lists', 'advlist'
      ],
