--- a/client/src/app/modules/quotation/components/customer-order-comment/customer-order-comment.component.html
+++ b/client/src/app/modules/quotation/components/customer-order-comment/customer-order-comment.component.html
@@ -14,6 +14,7 @@
                     inline : true,
                     min_height : 200,
                     entity_encoding : 'raw',
+                    browser_spellcheck: true,
                     language: 'fr_FR',
                     plugins: ['lists', 'advlist'
                     ],
