--- a/src/main/resources/mails/templates/missing-attachment.html
+++ b/src/main/resources/mails/templates/missing-attachment.html
@@ -226,7 +226,7 @@
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
                                                                 <p>Dans l'objectif de poursuivre rapidement le
                                                                     traitement de votre commande, pourriez-vous nous
-                                                                    transmettre les pièces suivantes ?</p>
+                                                                    transmettre les pièces/informations suivantes ?</p>
                                                                 <p th:if="${isLastReminder}"><strong>Merci de nous
                                                                         confirmer la poursuite de votre commande. Sans
                                                                         retour de votre part sous 8 jours nous
