--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1488,6 +1488,7 @@
           <tr>
             <td>
               <generic-datepicker [(model)]="constant.dateAccountingClosureForAccountant"
+                label="Date - cloture comptable pour les comptables" [form]="constantForm"
                 propertyName="dateAccountingClosureForAccountant" [isMandatory]="true"
                 [isDisabled]="!editMode"></generic-datepicker>
             </td>
