fix rollback isDisabled values for phone and mail

--- a/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
@@ -7,7 +7,7 @@
     close
   </mat-icon>
   <mat-icon color="accent" matTooltip="Afficher" matTooltipShowDelay="1000" matSuffix (click)="clickOnPreviewIcon()"
-    *ngIf="isDisplayPreviewShortcut && isDisabled" class="pointer, visibility ">
+    *ngIf="isDisplayPreviewShortcut && isDisabled" class="pointer visibility ">
     visibility
   </mat-icon>
   <mat-spinner *ngIf="isLoading" diameter="16" style="display: inline-flex" matSuffix color="accent"></mat-spinner>
