--- a/src/main/resources/mails/templates/invoice-reminder.html
+++ b/src/main/resources/mails/templates/invoice-reminder.html
@@ -226,7 +226,7 @@
                                                                 <p>Nous vous adressons une nouvelle fois la facture de
                                                                     votre commande n°<span
                                                                         th:text="${customerOrder.id}"></span> à
-                                                                    télécharger en PJ. <br />
+                                                                    télécharger en PJ. </p><br />
                                                                 <p th:if="${isLastReminder}"><strong><span>Sans
                                                                             réglement de
                                                                             votre part dans les 10 jours, nous nous
