--- a/src/main/resources/mails/templates/send-announcement-confrere.html
+++ b/src/main/resources/mails/templates/send-announcement-confrere.html
@@ -161,8 +161,9 @@
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p>Cher Confrère,</p>
                                                                 <p>Nous vous prions de trouver en pièce jointe le texte
-                                                                    d'insertion légale à faire paraître dans votre
-                                                                    prochaine édition en composition économique :</p>
+                                                                    d'insertion légale à faire paraître le <span
+                                                                        th:text="${announcementPublicationDate}"></span>
+                                                                    en composition économique :</p>
                                                                 <ul>
                                                                     <li>
                                                                         Société : <span
