--- a/src/main/resources/mails/templates/renew-password.html
+++ b/src/main/resources/mails/templates/renew-password.html
@@ -174,8 +174,8 @@
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
-                                                                <p>Veuillez trouver votre nouveau mot de passe : <span
-                                                                        th:text="${explaination}"></span></p>
+                                                                <p>Veuillez trouver votre nouveau login et mot de passe
+                                                                    : <span th:text="${explaination}"></span></p>
                                                             </td>
                                                         </tr>
                                                     </table>
