--- a/src/main/resources/mails/templates/customer-order-in-progress.html
+++ b/src/main/resources/mails/templates/customer-order-in-progress.html
@@ -228,7 +228,7 @@
                                                                         th:text="${invoiceLabelResult.billingLabelCity.label}"></span>,
                                                                     et sera transmise, à l'adresse suivante <span
                                                                         style="color:rgb(35, 61, 86);; text-decoration:none"><span
-                                                                            th:text="${mailComputeResult.recipientsMailTo[0].mail}"></span></span>
+                                                                            th:text="${mailComputeResultInvoice.recipientsMailTo[0].mail}"></span></span>
                                                                 </p>
                                                             </td>
                                                         </tr>
